--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vite-react-games",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://4831-112-79-108-98.ngrok-free.app",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,8 +11,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-bootstrap": "^2.10.9",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^6.30.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
